gdnative/tests/ui/export_fail_01.stderr
error: #[derive(Export)] only supports fieldless enums
 --> tests/ui/export_fail_01.rs:5:5
  |
5 |     Bar(String),
  |     ^^^

error: #[derive(Export)] only supports fieldless enums
 --> tests/ui/export_fail_01.rs:6:5
  |
6 |     Baz { a: i32, b: u32 },
  |     ^^^
